--- a/Translate/app/src/main/res/layout/activity_voice_translate.xml
+++ b/Translate/app/src/main/res/layout/activity_voice_translate.xml
@@ -42,6 +42,7 @@
                 android:layout_height="@dimen/dimen_15"
                 android:layout_marginStart="@dimen/margin_20"
                 android:layout_marginEnd="@dimen/margin_20"
+                android:layout_marginTop="2dp"
                 android:src="@mipmap/tran_change"/>
 
             <TextView
