--- a/Translate/app/src/main/res/layout/activity_voice_translate.xml
+++ b/Translate/app/src/main/res/layout/activity_voice_translate.xml
@@ -2,7 +2,6 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:wlv="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f9faf9"
@@ -188,4 +187,10 @@
 
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/avt_iv_guide"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@mipmap/first_1"
+        android:visibility="gone"/>
 </RelativeLayout>
